# ADuCM405x_DFP

./: LICENSE  README.md  library.mk  meson.build
Drivers/Include/: adi_si_rev.h
Drivers/Source/GCC/: ADuCM4050.ld  startup_ADuCM4050.c
License/: 2017-02-16-CM4x50EZDFP Click Thru SLA.rtf  2017-02-16-CM4x50EZDFP Click Thru SLA.txt
